[gd_scene load_steps=5 format=3 uid="uid://co7n85vfs7w5g"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_5w748"]
[ext_resource type="Texture2D" uid="uid://j26b23xeqs41" path="res://Images/Various NPCs Banner 2.png" id="2_3di86"]
[ext_resource type="PackedScene" uid="uid://dy2iqulqcbvck" path="res://Popup/interactive_popup.tscn" id="3_hcd8g"]
[ext_resource type="PackedScene" uid="uid://ys2g6ag6tauy" path="res://Animations/MuteButton/mute_button.tscn" id="4_ojalg"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5w748")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3di86")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.29, 0.29, 0.29, 1)

[node name="BG" type="Panel" parent="PanelContainer"]
clip_contents = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/BG/MarginContainer"]
layout_mode = 2

[node name="VerticalSaveMenu" type="VBoxContainer" parent="PanelContainer/BG/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="NewGameButton" type="Button" parent="PanelContainer/BG/MarginContainer/ScrollContainer/VerticalSaveMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="InteractivePopup" parent="." instance=ExtResource("3_hcd8g")]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 1

[node name="MuteButton" parent="." instance=ExtResource("4_ojalg")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -47.0
offset_right = -24.0
offset_bottom = -20.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="PanelContainer/BG/MarginContainer/ScrollContainer/VerticalSaveMenu/NewGameButton" to="." method="_on_new_game_button_pressed"]
